--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,16 @@
   </head>
 
   <body>
+    <template id="todo-item">
+      <li>
+        <div class="view">
+          <input class="toggle" type="checkbox" />
+          <label></label>
+          <button class="destroy"></button>
+        </div>
+        <input class="edit" />
+      </li>
+    </template>
     <section class="todoapp">
       <header class="header">
         <h1>todos</h1>
