refactor: ch05 샘플 폴더 명확히 수정 (XMLHttpRequest)

--- a/httpRequests/Fetch/index.html
+++ b/httpRequests/Fetch/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Frameworkless Frontend Development: HTTP Requests</title>
+    <title>Frameworkless Frontend Development: Fetch</title>
   </head>
 
   <body>
