--- a/src/programmingRoute/index.html
+++ b/src/programmingRoute/index.html
@@ -10,9 +10,11 @@
 
   <body>
     <header>
-      <a href="#/">Go To Index</a>
-      <a href="#/list">Go To List</a>
-      <a href="#/dummy">Dummy Page</a>
+      <header>
+        <button data-navigate="/">Go To Index</button>
+        <button data-navigate="/list">Go To List</button>
+        <button data-navigate="/dummy">Dummy Page</button>
+      </header>
     </header>
     <main></main>
     <script type="module" src="index.js"></script>
