--- a/src/historyAPIRoute/index.html
+++ b/src/historyAPIRoute/index.html
@@ -6,16 +6,17 @@
         padding: 10px;
       }
     </style>
+    <script src="//unpkg.com/navigo@6"></script>
   </head>
 
   <body>
     <header>
-      <a data-navigation href="/">Go To Index</a>
-      <a data-navigation href="/list">Go To List</a>
-      <a data-navigation href="/list/1">Go To Detail With Id 1</a>
-      <a data-navigation href="/list/2">Go To Detail With Id 2</a>
-      <a data-navigation href="/list/1/2">Go To Another Detail</a>
-      <a data-navigation href="/dummy">Dummy Page</a>
+      <a data-navigo href="/">Go To Index</a>
+      <a data-navigo href="/list">Go To List</a>
+      <a data-navigo href="/list/1">Go To Detail With Id 1</a>
+      <a data-navigo href="/list/2">Go To Detail With Id 2</a>
+      <a data-navigo href="/list/1/2">Go To Another Detail</a>
+      <a data-navigo href="/dummy">Dummy Page</a>
     </header>
     <main></main>
     <script type="module" src="index.js"></script>
