feat: ch07, TodoMVC 기본 코드, 누락된 이벤트 및 컨트롤러 코드 구현

--- a/src/todoMVCBase/index.html
+++ b/src/todoMVCBase/index.html
@@ -8,7 +8,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/todomvc-app-css@2.1.2/index.css"
     />
-    <title>Frameworkless Frontend Development: Rendering</title>
+    <title>Frameworkless Frontend Development: State Management</title>
+    <style>
+      .hidden {
+        display: none;
+      }
+    </style>
   </head>
 
   <body>
