feat: ch07 상태 관리, 이벤트 버스, 리덕스 패턴 적용 #comp

--- a/src/handleStateEventBus-Redux/index.html
+++ b/src/handleStateEventBus-Redux/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/todomvc-app-css@2.1.2/index.css"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.0.1/redux.js"></script>
     <title>Frameworkless Frontend Development: State Management</title>
     <style>
       .hidden {
